--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     compileOnly 'com.google.android.wearable:wearable:2.9.0'
 
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
